Fix tutorial documentation for chapters 5-6   - Fix non-existent CLI commands and flags in tutorials   - Fix cargo sbom format arguments (cdx → cyclone_dx_json_1_6)   - Remove musl target references (doesn't support cdylib)   - Add Java FFM flags: --enable-preview, --enable-native-access   - Fix Shadow JAR filename in cross-compilation tutorial   - Add schema extraction tests to BundleLoaderTest   - Verified basic cross compile procedure works on raspberry pi